# xbindkeys-config-molasses

./: .gitignore  CMakeLists.txt  ChangeLog  Dockerfile  README.md
.github/workflows/: build.yml
include/: menu.h  middle.h  version.h
src/: menu.c  middle.c  speedc.c  xbindkeys_config.c
